fix layout issues with ads

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -161,7 +161,7 @@
   width: 300px;
   min-height: 300px;
   flex-grow: 0;
-  // background-color: red;
+  //background-color: red;
 }
 
 .main{
@@ -211,7 +211,7 @@
   //background-color: pink;
 }
 
-@media (max-width: 1279px) {
+@media (max-width: 1440px) {
   .adRight {
       width: 120px;
   }
